完成宿主和插件的依赖统一

--- a/MyPluginDemo/plugina/build.gradle
+++ b/MyPluginDemo/plugina/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.zyj.module'
 }
 
 android {
@@ -35,5 +36,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile 'org.hibernate:hibernate-core:3.6.3.Final'
     implementation project(':pluginLib')
 }
