--- a/MyPluginDemo/app/build.gradle
+++ b/MyPluginDemo/app/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'com.zyj.host'
+
 
 android {
     compileSdkVersion 30
@@ -36,5 +36,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile 'org.slf4j:slf4j-api:1.3.0'
     implementation project(':pluginLib')
 }
