--- a/MyPluginDemo/pluginb/build.gradle
+++ b/MyPluginDemo/pluginb/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compile 'org.hibernate:hibernate-core:3.6.3.Final'
     implementation project(':pluginLib')
 }
