--- a/MyPluginDemo/app/build.gradle
+++ b/MyPluginDemo/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    compile 'org.slf4j:slf4j-api:1.3.0'
+    api 'org.slf4j:slf4j-api:1.7.22'
     implementation project(':pluginLib')
+
 }
